--- a/index.html
+++ b/index.html
@@ -27,8 +27,27 @@ body, html {
   display: none;
 }
 </style>
+<!-- Disable right click, Inspect Element -->
+<script>
+document.onkeydown = function(e) {
+if(event.keyCode == 123) {
+return false;
+}
+if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+return false;
+}
+}
+</script>
+
+
 </head>
-<body>
+<body oncontextmenu="return false;">
 
 <!-- Links (sit on top) -->
 <div class="w3-top">
