--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<!-- HSTS Header -->
+<script src="worker.js"></script>
 <!-- Favicons -->
 <link href="images/logo/favicon_fe.ico" rel="icon">
 <link href="images/logo/favicon512x512.jpg" rel="felix-logo">
@@ -88,7 +90,7 @@ return false;
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT US</span></h5>
-    <p>The Felixent was founded in YGN by Mr. Chim in 2019, MM, Every organization, regardless of size, needs someone in charge of IT. Hiring a Felixent’s CIO to lead your strategic technology efforts helps you get the most from your investments. CIO responsibilities often include managing IT staff, vendors, budgets, and assets; designing IT processes, standards, sourcing, and procurement; providing knowledge specific to the association and nonprofit industry; enhancing application-specific knowledge; and representing the organization’s technology interest at the executive/boardlevel.</p>
+    <p>The Felixent was founded in YGN by <a href="https://www.linkedin.com/in/sethuaung/">Mr. Chim</a> in 2019, MM, Every organization, regardless of size, needs someone in charge of IT. Hiring a Felixent’s CIO to lead your strategic technology efforts helps you get the most from your investments. CIO responsibilities often include managing IT staff, vendors, budgets, and assets; designing IT processes, standards, sourcing, and procurement; providing knowledge specific to the association and nonprofit industry; enhancing application-specific knowledge; and representing the organization’s technology interest at the executive/boardlevel.</p>
     <p>Scope: To build sustainable IT capabilities able to support business plans. </p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"Diagnosing and troubleshooting IT operational inefficiencies (in supply chain management, procurement, manufacturing, service operations, ITSM, etc.). </i></p>
@@ -141,11 +143,26 @@ return false;
     </div>
 
     <div id="Products" class="w3-container menu w3-padding-48 w3-card">
-      <h5>OpenSourcePOS Systems</h5>
+      <h5> OpenSource POS Systems</h5>
       <p class="w3-text-grey">For small shop/marts.</p><br>
     
-      <h5>Odoo (Opensource ERP/CRM)</h5>
-      <p class="w3-text-grey">Odoo is a suite of open source business apps that cover all your company needs: CRM, eCommerce, accounting, inventory, point of sale, project management, etc</p><br>
+      <h5> Odoo-Community Version (Opensource ERP/CRM)</h5>
+      <p class="w3-text-grey">Odoo is a suite of open-source Business Apps that cover all your company needs: CRM, eCommerce, Accounting, Inventory, Point of Sale, Project management, etc</p>
+      <p>1. OHRMS </p>
+      <p>2. Accounting </p>
+      <p>3. CRM </p>
+      <p>4. Inventory Management</p>
+      <p>5. Helpdesk Management</p>
+      <p>6. Front Office Management</p>
+      <p>7. Hotel Management</p>
+      <p>8. Salon Management</p>
+      <p>9. Gym Management</p>
+      <p>10. Laundry Management</p>
+      <p>11. Point of Sales</p>
+      <p>12. Mobile Service Shop</p>
+      <p>13. Dynamic Dashboard</p>
+      <p>14. Database restore manager </p>
+      <br>
     
       <h5>Microsoft Dynamics 365 (CRM/ERP)</h5>
       <p class="w3-text-grey">also known as Microsoft Dynamics CRM, is a customer relationship management software tool made by Microsoft that offers more extensive features than a standard CRM. </p>
@@ -162,7 +179,7 @@ return false;
     <p>Find us at some address at some place.</p>
     <img src="images/maps.jpg" class="w3-image" style="width:100%">
     <p><span class="w3-tag">FYI!</span> We offer full-service support for any org-size, large or small.</p>
-    <p><strong>Make</strong> an appointment, ask for today or just send us a message:</p>
+    <p><strong>Make</strong> an appointment, ask for today or just send us a message:- <a href="mailto:felixent@outlook.com">Click to Send Email</a></p>
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="number" placeholder="Which Services or Products" required name="People"></p>
