--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@ return false;
       <p class="w3-text-grey">Cloud-services</p>
       <p class="w3-text-grey">Grow-as-you-go</p>
       <p class="w3-text-grey">IT procurement.</p>
+
+      <h5>ODOO-ERP SERVICES</h5>
+      <p class="w3-text-grey">Odoo Customization </p>
+      <p class="w3-text-grey">Hire Odoo Developer </p>
+      <p class="w3-text-grey">Odoo Implementation </p>
+      <p class="w3-text-grey">Odoo Integration </p>
+      <p class="w3-text-grey">Odoo Support </p>
+      <p class="w3-text-grey">Odoo Migration </p>
+      <p class="w3-text-grey">Odoo Consultancy </p>
+      <p class="w3-text-grey">Odoo Training </p>
+      <p class="w3-text-grey">Odoo Licensing </p>
     </div>
 
     <div id="Products" class="w3-container menu w3-padding-48 w3-card">
